Update REPL to Fable 2

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="shortcut icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
-<link href="style.css" rel="stylesheet"></head>
+</head>
 <body>
     <div id="app-container"></div>
 
@@ -33,5 +33,5 @@
           }
         });
     </script>
-<script type="text/javascript" src="main.8606de6343b00d4a4614.js"></script></body>
+</body>
 </html>
