--- a/index.html
+++ b/index.html
@@ -23,5 +23,5 @@
     <script src="libs/vs/loader.js"></script>
     <script src="libs/vs/editor/editor.main.nls.js"></script>
     <script src="libs/vs/editor/editor.main.js"></script>
-<script type="text/javascript" src="main.49c607680430e9695be5.js"></script></body>
+<script type="text/javascript" src="app.dc954ec067b595158e09.js"></script></body>
 </html>
