--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="shortcut icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
-    <!-- <link rel="stylesheet" href="style.css"> -->
-</head>
+<link href="style.css" rel="stylesheet"></head>
 <body>
     <div id="app-container"></div>
 
@@ -18,8 +17,5 @@
     <script src="libs/vs/loader.js"></script>
     <script src="libs/vs/editor/editor.main.nls.js"></script>
     <script src="libs/vs/editor/editor.main.js"></script>
-
-    <script src="style.js"></script>
-    <script src="app.js"></script>
-</body>
+<script type="text/javascript" src="app.1ebcd75425ba746cf262.js"></script></body>
 </html>
