--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="has-navbar-fixed-top">
+<html>
 <head>
     <title>Fable REPL</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
