--- a/samples/elmish/spreadsheet.html
+++ b/samples/elmish/spreadsheet.html
@@ -5,8 +5,8 @@
   <title>Excel 365 in an hour</title>
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="fable.ico" />
-  <script src="https://unpkg.com/virtual-dom@2.1.1/dist/virtual-dom.js"></script>
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
   <style>
     body {
       padding: 50px;
