Use external app icon, correct html

--- a/public/samples/elmish/validation.html
+++ b/public/samples/elmish/validation.html
@@ -1,14 +1,15 @@
-<!doctype html>
 <html>
+
 <head>
-  <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
-  <title>Elmish Admin</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
+    <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" />
-  <script src="https://cdn.polyfill.io/v2/polyfill.js?features=default,fetch"></script>
+    <script src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
 </head>
-<body>
-  <div id="elmish-app"></div>
-  <script src="bundle.js"></script>
+
+<body class="app-container">
+    <div id="elmish-app" class="elmish-app"></div>
 </body>
+
 </html>
