--- a/samples/elmish/memory.html
+++ b/samples/elmish/memory.html
@@ -1,9 +1,9 @@
 <html>
 <head>
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
-  <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
-  <style>
+  <script src="__HOST__/libs/react.production.min.js"></script>
+  <script src="__HOST__/libs/react-dom.production.min.js"></script>
+<style>
 .card-container {
     height: 90px;
     width: 90px;
