--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <link data-name="vs/editor/editor.main" rel="stylesheet" href="libs/vs/editor/editor.main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-    <link rel="shortcut icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+    <link rel="shortcut icon" href="img/fable.ico">
 <link href="style.css" rel="stylesheet"></head>
 <body>
     <div id="app-container"></div>
-<script type="text/javascript" src="app.1314472621f19dce0250.js"></script></body>
+<script type="text/javascript" src="app.21bfeea14a50717c9285.js"></script></body>
 </html>
