--- a/samples/elmish/todomvc.html
+++ b/samples/elmish/todomvc.html
@@ -1,8 +1,8 @@
 <html>
 <head>
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
-  <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+  <script src="__HOST__/libs/react.production.min.js"></script>
+  <script src="__HOST__/libs/react-dom.production.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://unpkg.com/todomvc-app-css@2.1.2/index.css">
   <script src="https://unpkg.com/todomvc-common@1.0.5/base.js"></script>
 </head>
