--- a/samples/elmish/validation.html
+++ b/samples/elmish/validation.html
@@ -2,10 +2,10 @@
 
 <head>
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" />
-    <script src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+    <script src="__HOST__/libs/react.production.min.js"></script>
+    <script src="__HOST__/libs/react-dom.production.min.js"></script>
+    <link rel="stylesheet" href="__HOST__/libs/css/bulma.min.css" />
+    <link rel="stylesheet" href="__HOST__/libs/css/font-awesome.min.css" />
 </head>
 
 <body class="app-container">
