Add Service Worker with Workbox Webpack plugin

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <link data-name="vs/editor/editor.main" rel="stylesheet" href="libs/vs/editor/editor.main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-    <link rel="shortcut icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+    <link rel="shortcut icon" href="img/fable.ico">
 </head>
 <body>
     <div id="app-container"></div>
