--- a/public/samples/elmish/clock.html
+++ b/public/samples/elmish/clock.html
@@ -1,8 +1,8 @@
 <html>
 <head>
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
-  <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+  <script src="__HOST__/libs/react.production.min.js"></script>
+  <script src="__HOST__/libs/react-dom.production.min.js"></script>
 </head>
 <body class="app-container">
     <div id="elmish-app" class="elmish-app"></div>
