--- a/public/samples/visual/recharts.html
+++ b/public/samples/visual/recharts.html
@@ -4,8 +4,8 @@
   <title>Fable + Recharts</title>
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+  <script src="__HOST__/libs/react.production.min.js"></script>
+  <script src="__HOST__/libs/react-dom.production.min.js"></script>
   <script crossorigin src="https://unpkg.com/prop-types@15.6/prop-types.min.js"></script>
   <script crossorigin src="https://unpkg.com/recharts@1.3.1/umd/Recharts.min.js"></script>
 </head>
