--- a/public/samples/elmish/validation.html
+++ b/public/samples/elmish/validation.html
@@ -5,7 +5,7 @@
     <script src="__HOST__/libs/react.production.min.js"></script>
     <script src="__HOST__/libs/react-dom.production.min.js"></script>
     <link rel="stylesheet" href="__HOST__/libs/css/bulma.min.css" />
-    <link rel="stylesheet" href="__HOST__/libs/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="__HOST__/libs/css/all.min.css" />
 </head>
 
 <body class="app-container">
