--- a/public/samples/fulma/fulma.html
+++ b/public/samples/fulma/fulma.html
@@ -4,7 +4,7 @@
     <script src="__HOST__/libs/react.production.min.js"></script>
     <script src="__HOST__/libs/react-dom.production.min.js"></script>
     <link rel="stylesheet" href="__HOST__/libs/css/bulma.min.css" />
-    <link rel="stylesheet" href="__HOST__/libs/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="__HOST__/libs/css/all.min.css" />
 </head>
  <body class="app-container">
     <div id="elmish-app" class="elmish-app"></div>
