--- a/samples/fulma/fulma.html
+++ b/samples/fulma/fulma.html
@@ -5,6 +5,16 @@
     <script src="__HOST__/libs/react-dom.production.min.js"></script>
     <link rel="stylesheet" href="__HOST__/libs/css/bulma.min.css" />
     <link rel="stylesheet" href="__HOST__/libs/css/all.min.css" />
+    <style>
+    /* Only needed for icon sample */
+    .container-sizes .block {
+        display: flex;
+    }
+    .container-sizes .icon {
+        background-color: yellow;
+        margin: 0 5px;
+    }
+    </style>
 </head>
  <body class="app-container">
     <div id="elmish-app" class="elmish-app"></div>
