--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="img/fable.ico">
-<link href="style.css" rel="stylesheet"></head>
+<link href="app.css" rel="stylesheet"></head>
 <body>
     <div id="app-container"></div>
-<script type="text/javascript" src="app.5c32650a258e11e7b9bf.js"></script></body>
+<script type="text/javascript" src="app.d32ae07d4dc68ce32ce9.js"></script></body>
 </html>
