--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,14 @@
 </head>
 <body>
     <div id="app-container"></div>
+    <script>
+if(window.navigator && navigator.serviceWorker) {
+  navigator.serviceWorker.getRegistrations().then(function(registrations) {
+    for(let registration of registrations) {
+      registration.unregister();
+    }
+  });
+}
+    </script>
 </body>
 </html>
