--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<!doctype html><html><head><title>Fable REPL</title><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta http-equiv="Content-Type" content="text/html;charset=utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" href="img/fable.ico"><link href="app.css" rel="stylesheet"></head><body><div id="app-container"></div><script src="app.f3603aacf6073869b856.js"></script></body></html>
+<!doctype html><html><head><title>Fable REPL</title><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta http-equiv="Content-Type" content="text/html;charset=utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" href="img/fable.ico"><link href="app.css" rel="stylesheet"></head><body><div id="app-container"></div><script>if(window.navigator && navigator.serviceWorker) {
+  navigator.serviceWorker.getRegistrations().then(function(registrations) {
+    for(let registration of registrations) {
+      registration.unregister();
+    }
+  });
+}</script><script src="app.72e054e3cded47d39ad8.js"></script></body></html>
