--- a/samples/ui/spreadsheet.html
+++ b/samples/ui/spreadsheet.html
@@ -5,7 +5,7 @@
   <title>Excel 365 in an hour</title>
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://gitcdn.xyz/repo/Matt-Esch/virtual-dom/master/dist/virtual-dom.js" crossorigin></script>
+  <script src="https://cdn.jsdelivr.net/npm/virtual-dom@2.1.1/dist/virtual-dom.js" crossorigin></script>
   <style>
     body {
       padding: 50px;
